...
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
...
    <string name="welcome_login_fragment">Welcome to the location reminder app</string>
    <string name="btn_login">Login</string>
    <string name="desc_fab_add_location_reminder">Add location reminder</string>
    <string name="desc_save_location_reminder">Save location reminder</string>
    <string name="selected_position">Selected position</string>
    <string name="location_permission_rationale">We need the location permission to be able showing your current location</string>
    <string name="select_poi_please">Select POI as a location for reminder</string>
</resources>

